Fixed map overflow on the contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2104,6 +2104,7 @@ img {
 }
 #mu-contact .mu-contact-area .mu-contact-content .mu-contact-right iframe {
   height: 500px;
+  width: 100%;
 }
 
 /*==================
